<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="com.rsegismont.androlife.settings.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/settings_general" />
    <header
        android:fragment="com.rsegismont.androlife.settings.SettingsActivity$HomePreferenceFragment"
        android:title="@string/settings_home" />
    <header
        android:fragment="com.rsegismont.androlife.settings.SettingsActivity$FiltersPreferenceFragment"
        android:title="@string/settings_filters" />
    <header
        android:fragment="com.rsegismont.androlife.settings.SettingsActivity$PerformancesPreferenceFragment"
        android:title="@string/settings_performances" />

</preference-headers>