<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/detail_viewnolifeonline"
        android:icon="@drawable/detail_play"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:title="@string/programme_play"
        android:visible="false" />
    <item
        android:id="@id/detail_register_calendar"
        android:icon="@drawable/detail_calendar"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:title="@string/programme_register_calendar"
        android:visible="false" />
    <item
        android:id="@id/detail_discuss_forum"
        android:icon="@drawable/detail_forum"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        android:title="@string/programme_discuss_forum"
        android:visible="false" />

</menu>