<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/androlife_camera_resultview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/result_view"
    android:orientation="vertical"
    android:padding="4.0dip"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/androlife_camera_url_margin"
            android:gravity="center"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/androlife_camera_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:indeterminate="true" />

            <TextView
                android:id="@+id/androlife_camera_url"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/result_minor_text"
                android:textSize="@dimen/androlife_camera_url_textsize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/androlife_camera_preview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/androlife_camera_imageview"
                android:layout_width="@dimen/androlife_camera_image_width"
                android:layout_height="@dimen/androlife_camera_image_height"
                android:layout_gravity="center"
                android:layout_margin="20.0dip"
                android:scaleType="centerCrop"
                android:src="@drawable/toutsuite" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/androlife_camera_image_margin"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/androlife_camera_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/androlife_camera_image_description" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/androlife_camera_detail"
            style="@style/androlife_camera_button_theme"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:enabled="false"
            android:text="@string/androlife_camera_detail"
            android:textColor="@android:color/white"
            android:textSize="14.0sp" />

        <Button
            android:id="@+id/androlife_camera_see"
            style="@style/androlife_camera_button_theme"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/androlife_camera_see_normal"
            android:textColor="@android:color/white"
            android:textSize="14.0sp" />

        <Button
            android:id="@+id/androlife_camera_scananother"
            style="@style/androlife_camera_button_theme"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/androlife_camera_scananother"
            android:textColor="@android:color/white"
            android:textSize="14.0sp" />
    </LinearLayout>

</LinearLayout>